force-app/main/default/objects/Quote/fields/Runner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Runner_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Runner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>