force-app/main/default/objects/Quote/fields/Runner_Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Runner_Discount_Price__c</fullName>
    <formula>Final_SubTotal__c * Runner_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Runner Discount Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>