force-app/main/default/objects/Quote/fields/Runner_Discount_Status__c.field-meta.xml
<CustomField>
    <fullName>Runner_Discount_Status__c</fullName>
    <label>Runner Discount Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>