force-app/main/default/objects/Quote/fields/Runner_Warrenty__c.field-meta.xml
<CustomField>
    <fullName>Runner_Warrenty__c</fullName>
    <label>Runner Warrenty</label>
    <length>90000</length>
    <type>LongTextArea</type>
</CustomField>