force-app/main/default/objects/Quote/fields/SSL__c.field-meta.xml
<CustomField>
    <fullName>SSL__c</fullName>
    <label>SSL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>