force-app/main/default/objects/Quote/fields/SSL_Amount__c.field-meta.xml
<CustomField>
    <fullName>SSL_Amount__c</fullName>
    <formula>Price__c *  SSL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSL Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>