force-app/main/default/objects/Quote/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IEC 61439-1</fullName>
                <default>true</default>
                <label>IEC 61439-1</label>
            </value>
            <value>
                <fullName>BS EN 61537:2007</fullName>
            </value>
            <value>
                <fullName>BS EN 1461:2009</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>