force-app/main/default/objects/Quote/fields/TPCpercent__c.field-meta.xml
<CustomField>
    <fullName>TPCpercent__c</fullName>
    <label>TPC %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>