force-app/main/default/objects/Quote/fields/Vat_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vat_Amount__c</fullName>
    <formula>Products_Price_with_Quantity__c  * ( VAT_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>