force-app/main/default/objects/Quote/fields/VAT_Amount_R__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_R__c</fullName>
    <formula>VAT_Percentage__c *  Final_Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount R.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>