force-app/main/default/objects/Quote/fields/VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage__c</fullName>
    <defaultValue>0.18</defaultValue>
    <label>VAT Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>