force-app/main/default/objects/Quote/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <defaultValue>&quot;12 months for the switchgear, Measuring equipment&apos;s &amp; accessories from the date of invoice&quot; + BR() +
&quot;18 months for enclosures and associated components from the date of invoice&quot;</defaultValue>
    <label>Warranty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>