force-app/main/default/objects/Quote/validationRules/Prevent_more_discount_on_repeater.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_more_discount_on_repeater</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( Rep_Discount__c ) ) ,Rep_Discount__c  &gt; 0.25)</errorConditionFormula>
    <errorDisplayField>Rep_Discount__c</errorDisplayField>
    <errorMessage>You can&apos;t give more than 25% discount.</errorMessage>
</ValidationRule>